# duckling

./: DOCKER_GUIDE.md  Dockerfile  README.md  duckling.cabal  test_indonesian.sh
Duckling/: Locale.hs
Duckling/AmountOfMoney/ID/: Corpus.hs  Rules.hs
Duckling/Ranking/: Classifiers.hs
Duckling/Rules/: EN.hs
Duckling/Time/ID/: Corpus.hs  Rules.hs
exe/Duckling/Ranking/: Generate.hs
tests/Duckling/AmountOfMoney/EN/: Tests.hs
tests/Duckling/Time/EN/: Tests.hs
