cabal-version:       2.2
-- Copyright (c) 2016-present, Facebook, Inc.
-- All rights reserved.
--
-- This source code is licensed under the BSD-style license found in the
-- LICENSE file in the root directory of this source tree.

name:                duckling
version:             0.2.0.1
synopsis:            A Haskell library for parsing text into structured data.
description:
  Duckling is a library for parsing text into structured data.
homepage:            https://github.com/facebook/duckling#readme
bug-reports:         https://github.com/facebook/duckling/issues
license:             BSD-3-Clause
license-files:       LICENSE
author:              Facebook, Inc.
maintainer:          duckling-team@fb.com
copyright:           Copyright (c) 2014-present, Facebook, Inc.
category:            Systems
build-type:          Simple
stability:           alpha
tested-with:
  GHC==8.4.4,
  GHC==8.6.5,
  GHC==8.8.4,
  GHC==8.10.3,
  GHC==9.0.1,
  GHC==9.2.5

extra-source-files:    README.md, CHANGELOG.md

library
  exposed-modules:     Duckling.Core
                     , Duckling.Debug
                     , Duckling.Testing.Types
  -- ------------------------------------------------------------------
  -- Core
                     , Duckling.Api
                     , Duckling.Engine
                     , Duckling.Engine.Regex
                     , Duckling.Locale
                     , Duckling.Region
                     , Duckling.Resolve
                     , Duckling.Types
                     , Duckling.Types.Document
                     , Duckling.Types.Stash

  -- ------------------------------------------------------------------
  -- Rules
                     , Duckling.Rules
                     , Duckling.Rules.Common
                     , Duckling.Rules.EN
                     , Duckling.Rules.ID

  -- ------------------------------------------------------------------
  -- Ranking
                     , Duckling.Ranking.Types
                     , Duckling.Ranking.Extraction
                     , Duckling.Ranking.Rank
                     , Duckling.Ranking.Classifiers
                     , Duckling.Ranking.Classifiers.EN_US
                     , Duckling.Ranking.Classifiers.ID_XX

  -- ------------------------------------------------------------------
  -- Dimensions
                     , Duckling.Dimensions
                     , Duckling.Dimensions.Common
                     , Duckling.Dimensions.Types
                     , Duckling.Dimensions.EN
                     , Duckling.Dimensions.ID

                     -- AmountOfMoney
                     , Duckling.AmountOfMoney.EN.Corpus
                     , Duckling.AmountOfMoney.EN.Rules
                     , Duckling.AmountOfMoney.EN.US.Corpus
                     , Duckling.AmountOfMoney.EN.US.Rules
                     , Duckling.AmountOfMoney.ID.Corpus
                     , Duckling.AmountOfMoney.ID.Rules
                     , Duckling.AmountOfMoney.Helpers
                     , Duckling.AmountOfMoney.Rules
                     , Duckling.AmountOfMoney.Types

                     -- Distance
                     , Duckling.Distance.EN.Corpus
                     , Duckling.Distance.EN.Rules
                     , Duckling.Distance.Helpers
                     , Duckling.Distance.Rules
                     , Duckling.Distance.Types
                     , Duckling.DistanceUnits.Types

                     -- Duration
                     , Duckling.Duration.EN.Corpus
                     , Duckling.Duration.EN.Rules
                     , Duckling.Duration.Helpers
                     , Duckling.Duration.Rules
                     , Duckling.Duration.Types

                     -- Email
                     , Duckling.Email.EN.Corpus
                     , Duckling.Email.EN.Rules
                     , Duckling.Email.Corpus
                     , Duckling.Email.Rules
                     , Duckling.Email.Types

                     -- Numeral
                     , Duckling.Numeral.EN.Corpus
                     , Duckling.Numeral.EN.Rules
                     , Duckling.Numeral.ID.Corpus
                     , Duckling.Numeral.ID.Rules
                     , Duckling.Numeral.Helpers
                     , Duckling.Numeral.Rules
                     , Duckling.Numeral.Types

                     -- Ordinal
                     , Duckling.Ordinal.EN.Corpus
                     , Duckling.Ordinal.EN.Rules
                     , Duckling.Ordinal.ID.Corpus
                     , Duckling.Ordinal.ID.Rules
                     , Duckling.Ordinal.Helpers
                     , Duckling.Ordinal.Types

                     -- PhoneNumber
                     , Duckling.PhoneNumber.Corpus
                     , Duckling.PhoneNumber.Rules
                     , Duckling.PhoneNumber.Types

                     -- Quantity
                     , Duckling.Quantity.EN.Corpus
                     , Duckling.Quantity.EN.Rules
                     , Duckling.Quantity.Helpers
                     , Duckling.Quantity.Types

                     -- Regex
                     , Duckling.Regex.Types

                     -- Temperature
                     , Duckling.Temperature.EN.Corpus
                     , Duckling.Temperature.EN.Rules
                     , Duckling.Temperature.Helpers
                     , Duckling.Temperature.Rules
                     , Duckling.Temperature.Types

                     -- Time
                     , Duckling.Time.EN.Corpus
                     , Duckling.Time.EN.Rules
                     , Duckling.Time.EN.US.Corpus
                     , Duckling.Time.EN.US.Rules
                     , Duckling.Time.ID.Corpus
                     , Duckling.Time.ID.Rules
                     , Duckling.Time.Computed
                     , Duckling.Time.Corpus
                     , Duckling.Time.Helpers
                     , Duckling.Time.HolidayHelpers
                     , Duckling.Time.Types
                     -- REMOVE ME
                     , Duckling.Time.TimeZone.Parse

                     -- TimeGrain
                     , Duckling.TimeGrain.EN.Rules
                     , Duckling.TimeGrain.ID.Rules
                     , Duckling.TimeGrain.Types

                     -- Url
                     , Duckling.Url.Corpus
                     , Duckling.Url.Helpers
                     , Duckling.Url.Rules
                     , Duckling.Url.Types

                     -- Volume
                     , Duckling.Volume.EN.Corpus
                     , Duckling.Volume.EN.Rules
                     , Duckling.Volume.Helpers
                     , Duckling.Volume.Rules
                     , Duckling.Volume.Types

                     -- CreditCardNumber
                     , Duckling.CreditCardNumber.Corpus
                     , Duckling.CreditCardNumber.Helpers
                     , Duckling.CreditCardNumber.Rules
                     , Duckling.CreditCardNumber.Types
  build-depends:     , base                  >= 4.8.2 && < 5.0
                     , array                 >= 0.5.1.1 && < 0.6
                     , attoparsec            >= 0.13.1.0 && < 0.15
                     , aeson                 >= 0.11.3.0 && < 2.0.4
                     , bytestring            >= 0.10.6.0 && < 0.12
                     , containers            >= 0.5.6.2 && < 0.7
                     , deepseq               >= 1.4.1.1 && < 1.5
                     , dependent-sum         >= 0.3.2.2 && < 0.8
                     , extra                 >= 1.4.10 && < 1.8
                     , hashable              >= 1.2.4.0 && < 1.4.2
                     , regex-base            >= 0.93.2 && < 0.95
                     , text                  >= 1.2.2.1 && < 1.3
                     , text-show             >= 2.1.2 && < 3.11
                     , time                  >= 1.5.0.1 && < 2
                     , timezone-series       >= 0.1.5.1 && < 0.2
                     , unordered-containers  >= 0.2.7.2 && < 0.3
  if os(windows)
    build-depends: , regex-pcre-builtin      >= 0.94.4 && < 0.96
  else
    build-depends: , regex-pcre              >= 0.94.4 && < 0.96

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite duckling-test
  type:                exitcode-stdio-1.0
  main-is:             TestMain.hs
  hs-source-dirs:      tests
  build-depends:       duckling
                     , base
                     , aeson
                     , text
                     , time
                     , unordered-containers
                     , tasty                 >= 0.11.1 && < 1.5
                     , tasty-hunit           >= 0.9.2 && < 1.0
  other-modules:       Duckling.Tests
                     , Duckling.Testing.Asserts

                     , Duckling.Api.Tests
                     , Duckling.Engine.Tests

  -- ------------------------------------------------------------------
  -- Dimensions
                     , Duckling.Dimensions.Tests

                     -- AmountOfMoney
                     , Duckling.AmountOfMoney.EN.Tests
                     , Duckling.AmountOfMoney.ID.Tests
                     , Duckling.AmountOfMoney.Tests

                     -- Distance
                     , Duckling.Distance.EN.Tests
                     , Duckling.Distance.Tests

                     -- Duration
                     , Duckling.Duration.EN.Tests
                     , Duckling.Duration.Tests

                     -- Email
                     , Duckling.Email.EN.Tests
                     , Duckling.Email.Tests

                     -- Numeral
                     , Duckling.Numeral.EN.Tests
                     , Duckling.Numeral.ID.Tests
                     , Duckling.Numeral.Tests

                     -- Ordinal
                     , Duckling.Ordinal.EN.Tests
                     , Duckling.Ordinal.ID.Tests
                     , Duckling.Ordinal.Tests

                     -- PhoneNumber
                     , Duckling.PhoneNumber.Tests

                     -- Quantity
                     , Duckling.Quantity.EN.Tests
                     , Duckling.Quantity.Tests

                     -- Temperature
                     , Duckling.Temperature.EN.Tests
                     , Duckling.Temperature.Tests

                     -- Time
                     , Duckling.Time.EN.Tests
                     , Duckling.Time.ID.Tests
                     , Duckling.Time.Tests

                     -- Url
                     , Duckling.Url.Tests

                     -- Volume
                     , Duckling.Volume.EN.Tests
                     , Duckling.Volume.Tests

                     -- CreditCardNumber
                     , Duckling.CreditCardNumber.Tests

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wincomplete-patterns
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable duckling-regen-exe
  main-is:             RegenMain.hs
  hs-source-dirs:      exe
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wincomplete-patterns -main-is RegenMain
  other-modules:       Duckling.Ranking.Train
                     , Duckling.Ranking.Generate
  build-depends:       duckling
                     , base
                     , haskell-src-exts      >= 1.18 && < 1.30
                     , text
                     , unordered-containers
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable duckling-example-exe
  main-is:             ExampleMain.hs
  hs-source-dirs:      exe
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is ExampleMain
  other-modules:       Duckling.Data.TimeZone
  build-depends:       duckling
                     , base
                     , aeson
                     , bytestring
                     , directory             >= 1.2.2.0 && < 1.4
                     , extra
                     , filepath              >= 1.4.0.0 && < 1.5
                     , snap-core             >= 1.0.2.0 && < 1.1
                     , snap-server           >= 1.0.1.1 && < 1.2
                     , text
                     , text-show
                     , time
                     , timezone-olson        >= 0.2 && < 0.3
                     , timezone-series
                     , unordered-containers
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable custom-dimension-example
  main-is:             CustomDimensionExample.hs
  hs-source-dirs:      exe
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is CustomDimensionExample
  build-depends:       duckling
                     , aeson
                     , base
                     , deepseq
                     , dependent-sum
                     , hashable
                     , text
                     , text-show
                     , unordered-containers
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable duckling-request-sample
  main-is:             DucklingRequestSample.hs
  hs-source-dirs:      exe
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is DucklingRequestSample
  other-modules:       Duckling.Data.TimeZone
  build-depends:       duckling
                     , base
                     , dependent-sum
                     , directory             >= 1.2.2.0 && < 1.4
                     , extra
                     , filepath              >= 1.4.0.0 && < 1.5
                     , text
                     , time
                     , timezone-olson        >= 0.2 && < 0.3
                     , timezone-series
                     , unordered-containers
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable duckling-expensive
  main-is:             DucklingExpensive.hs
  hs-source-dirs:      exe
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is DucklingExpensive
  other-modules:       Duckling.Data.TimeZone
  build-depends:       duckling
                     , base
                     , dependent-sum
                     , directory             >= 1.2.2.0 && < 1.4
                     , extra
                     , filepath              >= 1.4.0.0 && < 1.5
                     , text
                     , time
                     , timezone-olson        >= 0.2 && < 0.3
                     , timezone-series
                     , unordered-containers
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/facebook/duckling
